	* generic/tkCanvBmap.c
	* generic/tkCanvImg.c
	* generic/tkCanvLine.c
	* generic/tkCanvPoly.c
	* generic/tkCanvTest.c
	* generic/tkCanvWind.c
	* generic/tkRectOval.c
	* generic/tkScrollbar.c
	* generic/tkStyle.c
	* generic/tkTest.c
	* unix/tkUnixEmbed.c
	* unix/tkUnixEvent.c
	* unix/tkUnixScale.c
	* unix/tkUnixScrlbr.c
	* unix/tkUnixSelect.c
	* unix/tkUnixWm.c

2010-05-31  Joe English <jenglish@users.sourceforge.net>

	* generic/tkBind.c(Tk_CreateBinding): Silently ignore empty 
	scripts (Fixes [Bug 3006842]).

2010-05-27  Joe English <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c, tests/ttk/treeview.test:
	[$tv tag bind $tag <...> {}] now removes binding completely.
	Fixes [Bug 3006842] (although there's still a problem somewhere
	in Tk_CreateBinding()).

2010-05-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* tests/wm.test: Fix 3 tests on Ubuntu 10.4, two of them timing dependent,
	  one wm-dependent.
	* generic/tkText.c    Fix some gcc strict-aliasing warnings (discovered
	* unix/tkUnixFont.c   with "-Wstrict-aliasing=2"
	* unix/tkUnixSelect.c

2010-05-20  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinX.c (HandleIMEComposition): [Bug 2992129]: Ensure that all
	places that generate key events zero them out first; Tk relies on that
	being true for the generic parts of the fix for Bug 1924761.

2010-05-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: Fix [Bug 3002230]: tk_chooseDirectory returns
	garbage on cancel

2010-05-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkBind.c: Revert [Patch 2999920], as it entails an
	incompatible change to the C API is and is the cause of [Bug 3002768].

2010-05-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkBind.c: [Patch 2999920]: Optimize Internal Virtual event
	string operations.
	* win/tkWinDialog.c: [Bug 2987995]: Tk_getOpenFile returns garbage
	under described circumstances

2010-05-11  Jan Nijtmans  <nijtmans@users.sf.net>
